exchanger/crates/ui/tests/snapshots/snapshots__privacy.snap
---
source: crates/ui/tests/snapshots.rs
expression: "both(p, q)"
---
### plain
--- html
<b>Конфиденциальность</b>
<b>Что я храню</b>
• ваш Telegram ID и имя пользователя;
• заявки: суммы, ссылки на чеки и счета, время;
• переписку с поддержкой по заявкам.

Зачем: чтобы выплатить деньги, разобрать спорный случай и ответить на запрос кошелька.
Никогда не прошу и не храню пароли, PIN и коды от ваших кошельков.
<i>Вопросы о данных — в поддержку.</i>
--- rich
<h3>Конфиденциальность</h3>
<h4>Что я храню</h4>
<ul>
<li>ваш Telegram ID и имя пользователя;</li>
<li>заявки: суммы, ссылки на чеки и счета, время;</li>
<li>переписку с поддержкой по заявкам.</li></ul>
<p>Зачем: чтобы выплатить деньги, разобрать спорный случай и ответить на запрос кошелька.</p>
<p>Никогда не прошу и не храню пароли, PIN и коды от ваших кошельков.</p>
<footer>Вопросы о данных — в поддержку.</footer>
--- keyboard: none

### premium
--- html
<b>Конфиденциальность</b>
<b>Что я храню</b>
• ваш Telegram ID и имя пользователя;
• заявки: суммы, ссылки на чеки и счета, время;
• переписку с поддержкой по заявкам.

Зачем: чтобы выплатить деньги, разобрать спорный случай и ответить на запрос кошелька.
Никогда не прошу и не храню пароли, PIN и коды от ваших кошельков.
<i>Вопросы о данных — в поддержку.</i>
--- rich
<h3>Конфиденциальность</h3>
<h4>Что я храню</h4>
<ul>
<li>ваш Telegram ID и имя пользователя;</li>
<li>заявки: суммы, ссылки на чеки и счета, время;</li>
<li>переписку с поддержкой по заявкам.</li></ul>
<p>Зачем: чтобы выплатить деньги, разобрать спорный случай и ответить на запрос кошелька.</p>
<p>Никогда не прошу и не храню пароли, PIN и коды от ваших кошельков.</p>
<footer>Вопросы о данных — в поддержку.</footer>
--- keyboard: none
