exchanger/crates/ui/tests/snapshots/snapshots__refund_started.snap
---
source: crates/ui/tests/snapshots.rs
expression: refunds.trim_end()
---
## below_minimum
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: сумма меньше минимума <code>2.00 USDT</code>.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: сумма меньше минимума <code>2.00 USDT</code>.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## above_maximum
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: сумма больше текущего лимита <code>500.00 USDT</code>.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: сумма больше текущего лимита <code>500.00 USDT</code>.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## unsupported_asset
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: меняю только USDT.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: меняю только USDT.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## invoice_paid_elsewhere
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: счёт оплатили до меня.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: счёт оплатили до меня.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## invoice_expired
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: счёт истёк до оплаты.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: счёт истёк до оплаты.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## rate_moved
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: курс сдвинулся больше чем на 1 %.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: курс сдвинулся больше чем на 1 %.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## client_request
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: вы попросили вернуть деньги.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: вы попросили вернуть деньги.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## underpaid
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: не пришла вся сумма для оплаты счёта.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: не пришла вся сумма для оплаты счёта.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]

## operator
### plain
--- html
↩️ <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: решение оператора.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"text":"📋 Номер заявки"}]

### premium
--- html
<tg-emoji emoji-id="5368000000000000005">↩️</tg-emoji> <b>Возвращаю <code>750.00 USDT</code></b> чеком CryptoBot.
Причина: решение оператора.
Заявка <code>A1B2C3D4E5</code>.
--- keyboard: inline
[{"copy_text":{"text":"A1B2C3D4E5"},"icon_custom_emoji_id":"5368000000000000013","text":"Номер заявки"}]
